# rpa-coding-challenge

./: .gitignore  README.md  config.json  main.py  pyproject.toml  requirements.txt  tasks.py
src/models/: browser.py  la_landing_page.py  la_search_page.py
src/utils/: count_words.py  has_money.py  is_within_range.py  logging_configuration.py  month_diff.py
tests/: test_browser.py  test_count_words.py  test_has_money.py  test_is_within_range.py  test_la_landing_page.py  test_la_search_page.py  test_month_diff.py
